version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/Worksheet.rst.txt
.. vale off



:class:`Worksheet`
==================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.Worksheet

   Bases: :py:obj:`object`



.. py:currentmodule:: Worksheet

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AddRow`
            - AddRow method.
          * - :py:attr:`~DeleteRow`
            - DeleteRow method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~RowCount`
            - RowCount property.







Property detail
---------------
.. py:property:: RowCount
   :type: Optional[int]


   
   RowCount property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: AddRow() -> int

   
   AddRow method.

   ..
       !! processed by numpydoc !!

.. py:method:: DeleteRow(index: int) -> None

   
   DeleteRow method.

   ..
       !! processed by numpydoc !!



.. vale on